# mashaaer-core

./: .flake8  .replit  .replit_test  .workflow  .workflow.alt  .workflow.bak  .workflow.flask  .workflow.minimal  .workflow.new  .workflow.old  .workflow_aligned  .workflow_express  .workflow_feedback  .workflow_health  .workflow_micro  .workflow_minimal  .workflow_new  .workflow_node  .workflow_ping  .workflow_port8080  .workflow_server  .workflow_simple  .workflow_startup_fix  .workflow_test  .workflow_test_server  .workflow_ultra_minimal  .workflow_with_reuse_port  ANDROID_README.md  API_DIAGNOSTIC_ENDPOINTS.md  AUDIO_AUTOPLAY_BYPASS.md  AUDIO_FIX.md  BREATHING_EFFECTS.md  CACHING_IMPLEMENTATION.md  CLEANUP_PLAN.md  COSMIC_LOADER_ANIMATIONS.md  COSMIC_SOUND_SYSTEM.md  COSMIC_THEME_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_README.md  DOCUMENTATION_INDEX.md  (+316 more)
RobinAI_Enhanced/: .workflow  __init__.py  main.py  requirements.txt
android/: README.md  build_apk.sh  buildozer.spec
attached_assets/: INSTALL_INSTRUCTIONS.md  Pasted---1743852802910.txt  Pasted---1743854647193.txt  Pasted---1743861211576.txt  Pasted---1743862903831.txt  Pasted---1744234764527.txt  Pasted--DOCTYPE-html-html-lang-en-class-replit-ui-theme-root-notranslate-translate-no-style-webk-1743900054498.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1743883354818.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1743883922188.txt  Pasted--Mashaaer--1744156214894.txt  Pasted--Mashaaer-Cosmic-Th-1744191463172.txt  (+302 more)
(+371 files in other folders)
