[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.2.0",
    "flask-migrate>=4.1.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "vosk>=0.3.45",
    "sqlalchemy>=2.0.40",
    "twilio>=9.5.1",
    "alembic>=1.15.2",
    "flask-cors>=5.0.1",
]
